# listen

./: .env  Cargo.toml  rustfmt.toml
bruno/music-serve/: scans.bru
server/: Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs
server/src/handlers/: albums.rs  mod.rs  scan.rs
server/src/models/: artist.rs
server/src/routers/: mod.rs
server/src/services/albums/: mod.rs
server/src/task/: mod.rs  music.rs
server/src/utils/: file.rs  mod.rs
src/: main.rs
src/services/songs/: metadata.rs  mod.rs
