[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
md-5 = "0.10.5"
actix = "0.13.5"
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4.4.0"
sea-orm = { workspace = true, features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "with-uuid", "with-chrono", "debug-print"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "json"] }
sea-orm-migration = "1.1.13"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.9.6"
backtrace = "0.3.69"
strum = "0.26.2"
strum_macros = "0.26.2"
sea-query = "0.32.6"
actix-cors = "0.6.4"
async-trait = "0.1.77"
actix-web-validator = "6.0.0"
validator = { version = "0.18", features = ["derive"] }
lofty = "0.22.4"
walkdir = "2.3.3"

[scripts]
dev = "cargo watch -x 'run'"
migration = "sea-orm-cli migrate up"